--- a/app/_styles/blocks/content.scss
+++ b/app/_styles/blocks/content.scss
@@ -1,3 +1,7 @@
+@use '../core/variables' as *;
+@use '../core/mixins' as *;
+@use '../globals/typography' as *;
+
 .content {
     &__header {
         @include wrap(site);
