--- a/app/_styles/core/variables.scss
+++ b/app/_styles/core/variables.scss
@@ -1,48 +1,53 @@
-// Path to static assets (bilder, ikoner etc.)
-$assets-path: "../_assets/";
+$assets-path: "./assets/";
 
-// Layout
+
 $max-width: 1440px;
-$content-width: 800px;
+$content-width: 1260px;
 $menu-height: 88px;
 $gutter: 16px;
 
-// Breakpoints
+
 $breakpoint-sm: 480px;
 $breakpoint-md: 768px;
 $breakpoint-lg: 1024px;
 $breakpoint-xl: 1280px;
 
-// Colors
-$white: #fff;
-$black: #181818;
-$gray: #e7e7e8;
-$orange: #dd3800;
-$light-orange: #fde6d8;
-$blue: #3050b1;
-$blue-dark: #052364;
 
-// Color roles
+$white: #F5F5F9;
+$black: #171717;
+$gray: #D1D1D6;
+$blue: #052261;
+$secondary-blue:#3c5c84;
+
 $base-color: $black;
-$primary-color: $orange;
-$secondary-color: $blue-dark;
-$link-color: $orange;
+$primary-color: $blue;
+$secondary-color: $white;
+$link-color: $blue;
 $link-hover-color: $black;
 $error-color: red;
 
-// Border radius
 $border-radius: 1.25rem;
 
-// Transitions
-$transition: 0.3s ease-in-out;
+$transition: 0.7s ease-in-out;
 
-// Font stack
 $font-base: 'Arial', sans-serif;
 $font-heading: 'Inter', sans-serif;
 $font-alt: 'Druk', sans-serif;
 
-// Font weights
+
 $font-light: 300;
-$font-regular: 400;
+$font-normal: 400;
 $font-bold: 600;
 $font-heavy: 900;
+
+$font-size-title: 2.5rem;
+$font-weight-title: $font-bold;
+$line-height-title: 1.3;
+
+$font-size-button: 0.875rem;
+$font-weight-button: $font-bold;
+$line-height-button: 1;
+
+$font-size-text: 1rem;
+$font-weight-text: $font-normal;
+$line-height-text: 1.5;
