--- a/app/_styles/globals/base.scss
+++ b/app/_styles/globals/base.scss
@@ -1,3 +1,5 @@
+@use '../core/variables' as *;
+
 * {
     box-sizing: border-box;
 }
@@ -6,7 +8,7 @@ html {
     scroll-behavior: smooth;
 }
 
-bbody {
+body {
     font-family: $font-base;
     color: $base-color;
     background-color: $white;
