Add footer styles and breakpoints: define responsive breakpoints and include footer in main styles

--- a/app/_styles/core/mixins.scss
+++ b/app/_styles/core/mixins.scss
@@ -48,3 +48,15 @@
         line-height: $line-height-text;
     }
 }
+
+@mixin respond($breakpoint) {
+    $value: map-get($breakpoints, $breakpoint);
+    
+    @if $value {
+        @media (max-width: $value) {
+            @content;
+        }
+    } @else {
+        @warn "Breakpoint '#{$breakpoint}' is not defined.";
+    }
+}
