--- a/app/_styles/core/variables.scss
+++ b/app/_styles/core/variables.scss
@@ -1,23 +1,22 @@
 $assets-path: "./assets/";
 
-
 $max-width: 1440px;
 $content-width: 1260px;
 $menu-height: 88px;
 $gutter: 16px;
 
+$breakpoints: (
+  sm: 480px,
+  md: 768px,
+  lg: 1024px,
+  xl: 1280px
+);
 
-$breakpoint-sm: 480px;
-$breakpoint-md: 768px;
-$breakpoint-lg: 1024px;
-$breakpoint-xl: 1280px;
-
-
-$white: #F5F5F9;
+$white: #f5f5f9;
 $black: #171717;
-$gray: #D1D1D6;
+$gray: #d1d1d6;
 $blue: #052261;
-$secondary-blue:#3c5c84;
+$secondary-blue: #3c5c84;
 
 $base-color: $black;
 $primary-color: $blue;
@@ -30,10 +29,9 @@ $border-radius: 1.25rem;
 
 $transition: 0.7s ease-in-out;
 
-$font-base: 'Arial', sans-serif;
-$font-heading: 'Inter', sans-serif;
-$font-alt: 'Druk', sans-serif;
-
+$font-base: "Arial", sans-serif;
+$font-heading: "Inter", sans-serif;
+$font-alt: "Druk", sans-serif;
 
 $font-light: 300;
 $font-normal: 400;
