--- a/app/_styles/main.scss
+++ b/app/_styles/main.scss
@@ -2,6 +2,7 @@
 @use './core/variables';
 @use './core/functions';
 @use './core/mixins'; 
+@use './core/animations.scss';
 
 // globals
 @use './globals/_reset';
