Enhance header component: add container and logo structure, update text content, and apply background styles

--- a/app/_styles/core/variables.scss
+++ b/app/_styles/core/variables.scss
@@ -1,4 +1,6 @@
-$assets-path: "./assets/";
+//app/_styles/core/variables.scss
+$img-path: "/images";
+$font-path: "/fonts";
 
 $max-width: 1440px;
 $content-width: 1260px;
