--- a/app/_styles/blocks/header.scss
+++ b/app/_styles/blocks/header.scss
@@ -1,4 +1,58 @@
-@use '../core/variables.scss' as *;
-@use '../core/mixins.scss' as *;
-@use '../globals/typography.scss' as *;
+@use "../core/variables" as *;
+@use "../core/mixins" as *;
 
+.header {
+  position: relative;
+  width: 100%;
+  height: 13rem; 
+  background: 
+  linear-gradient(
+      to right,
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 0.35)
+    ),
+    url("#{$img-path}/kavallerigatan.jpg") center 25% / cover no-repeat;
+  background-attachment: fixed;
+  
+  overflow: hidden;
+
+  &__container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    @include wrap(site);
+  }
+
+  &__logo {
+    position: absolute;
+    top: $gutter;
+    left: $gutter;
+
+    img {
+      width: 100px;
+      height: auto;
+      display: block;
+    }
+  }
+
+  &__text {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    padding: $gutter;
+    text-align: right;
+    color: $secondary-color;
+
+    &-title {
+      font-size: 1.5rem;
+      margin: 0;
+      font-weight: $font-weight-title;
+    }
+
+    &-subtitle {
+      font-size: 1rem;
+      margin-top: 0.25rem;
+      font-weight: $font-weight-text;
+    }
+  }
+}
