--- a/app/_styles/blocks/header.scss
+++ b/app/_styles/blocks/header.scss
@@ -4,16 +4,11 @@
 .header {
   position: relative;
   width: 100%;
-  height: 13rem; 
-  background: 
-  linear-gradient(
-      to right,
-      rgba(0, 0, 0, 0),
-      rgba(0, 0, 0, 0.35)
-    ),
+  height: 13rem;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.35)),
     url("#{$img-path}/kavallerigatan.jpg") center 25% / cover no-repeat;
   background-attachment: fixed;
-  
+
   overflow: hidden;
 
   &__container {
