--- a/app/_styles/core/variables.scss
+++ b/app/_styles/core/variables.scss
@@ -14,6 +14,10 @@ $breakpoints: (
   xl: 1280px
 );
 
+$padding-mobile: 16px;
+$padding-tablet: 30px;
+$padding-desktop: 90px;
+
 $white: #f5f5f9;
 $black: #171717;
 $gray: #d1d1d6;
