feat: Add new API routes for content and news management, including CRUD operations
- Implemented GET, PUT, and DELETE methods for content and news posts.
- Added new components for displaying profiles and a card grid layout.
- Introduced a rich text editor for content management.
- Created a login modal with user authentication.
- Added styles for modal and components.
- Included SVG icons for UI elements.
- Defined TypeScript types for content and news post data.

--- a/app/_styles/blocks/footer.scss
+++ b/app/_styles/blocks/footer.scss
@@ -10,10 +10,12 @@
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
+    padding: 0 $gutter;
+    
 
     @include respond(md) {
       flex-direction: row;
-      justify-content: space-around;
+      justify-content: space-evenly;
       align-items: center;
     }
   }
