--- a/app/_styles/blocks/header.scss
+++ b/app/_styles/blocks/header.scss
@@ -4,11 +4,10 @@
 .header {
   position: relative;
   width: 100%;
-  height: 13rem;
+  height: clamp(13rem, 25vh, 35rem);
   background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.35)),
     url("#{$img-path}/kavallerigatan.jpg") center 25% / cover no-repeat;
   background-attachment: fixed;
-
   overflow: hidden;
 
   &__container {
@@ -35,19 +34,27 @@
     bottom: 0;
     right: 0;
     padding: $gutter;
-    text-align: right;
-    color: $secondary-color;
+    text-align: center;;
 
-    &-title {
-      font-size: 1.5rem;
-      margin: 0;
-      font-weight: $font-weight-title;
+    @include respond(lg) {
+      text-align: right;
+      right: $gutter;
     }
 
-    &-subtitle {
-      font-size: 1rem;
-      margin-top: 0.25rem;
-      font-weight: $font-weight-text;
-    }
+  }
+
+  &__title {
+    font-size: $font-size-title;
+    margin: 0;
+    font-weight: $font-weight-title;
+    line-height: $line-height-title;
+    color: $black;
+  }
+
+  &__subtitle {
+    font-size: 1rem;
+    margin-top: 0.25rem;
+    font-weight: $font-weight-text;
+    color: $white;
   }
 }
