--- a/app/_styles/core/animations.scss
+++ b/app/_styles/core/animations.scss
@@ -4,14 +4,14 @@
 
 @mixin hamburger-icon($block) {
   .#{$block} {
-    width: 28px; // Fast bredd för kontroll – justera efter behov
-    height: 20px;
+    width: 50px;
+    height: 100%;
     position: relative;
     cursor: pointer;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 5px;
+    gap: 3.5px;
     z-index: 10;
 
     @include respond-min(map.get($breakpoints, md)) {
@@ -20,9 +20,9 @@
 
     span {
       display: block;
-      height: 3px;
+      height: 6px;
       width: 100%;
-      background: black;
+      background: $primary-beige;
       border-radius: 2px;
       transition: transform 0.3s ease, opacity 0.3s ease;
       transform-origin: center;
