--- a/app/_styles/main.scss
+++ b/app/_styles/main.scss
@@ -5,7 +5,6 @@
 @use './core/animations.scss';
 
 // globals
-@use './globals/_reset';
 @use './globals/base';
 @use './globals/typography';
 
@@ -18,6 +17,9 @@
 @use './blocks/footer.scss';
 @use './blocks/header.scss';
 @use './blocks/loginModal.scss';
+@use './blocks/adminNav.scss';
 @use './blocks/navEditModal.scss';
 @use './blocks/headerEditor.scss';
 @use './blocks/nyheter.scss';
+@use './blocks/linkCard.scss';
+@use './blocks/adminPanel.scss';
