--- a/app/_styles/blocks/footer.scss
+++ b/app/_styles/blocks/footer.scss
@@ -4,7 +4,7 @@
 .footer {
   background-color: $secondary-blue;
   padding-block: 2rem;
-  color: $black;
+  color: $primary-beige;
 
   &__container {
     display: flex;
@@ -62,7 +62,6 @@
     margin: 0;
     padding: 0;
     font-size: inherit;
-    color: $black;
 
   }
 
