feat: Enhance accessibility and improve layout
- Added a hidden heading for main navigation in layout.js for better screen reader support.
- Updated hero title in page.js with an ID for accessibility.
- Changed paragraph tags to headings for link titles in page.js to improve semantic structure.
- Added a visually hidden paragraph for additional information in page.js.
- Modified footer styles to improve layout and color contrast.
- Updated link card styles for better spacing and hover effects.
- Improved navbar styles with transitions for better user experience.
- Enhanced news section styles for better layout and readability.
- Refactored API routes for board members to include CRUD operations with error handling.
- Removed deprecated board members data file.
- Updated Prisma schema to use enum for board positions.
- Replaced SVG icons with updated versions for better visual consistency.

--- a/app/_styles/blocks/footer.scss
+++ b/app/_styles/blocks/footer.scss
@@ -4,7 +4,7 @@
 .footer {
   background-color: $secondary-blue;
   padding-block: 2rem;
-  color: $primary-beige;
+  color: $black;
 
   &__container {
     display: flex;
@@ -16,7 +16,7 @@
     @include respond(md) {
       flex-direction: row;
       justify-content: space-evenly;
-      align-items: center;
+     
     }
   }
 
@@ -26,18 +26,20 @@
   }
 
   &__info {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    gap: $gutter;
-    font-size: 0.875rem;
-    line-height: 1.4;      
+    display: grid;
+  grid-template-columns: 1fr;
+  gap: $gutter;
+  font-size: 0.875rem;
+  line-height: 1.4;
+  color: $primary-beige;
 
-    @include respond(md) {
-      flex-direction: row;
-      flex-wrap: wrap;
-      justify-content: space-evenly;
-    }
+  @include respond(md) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @include respond(lg) {
+    grid-template-columns: repeat(4, 1fr); // Tillbaka till fyra kolumner vid stor desktop
+  }
   }
 
   &__info-item {
@@ -62,7 +64,15 @@
     margin: 0;
     padding: 0;
     font-size: inherit;
+    
 
+  }
+
+  &__login {
+    p {
+      color: $primary-beige;
+      margin:0;
+    }
   }
 
   &__login-button {
@@ -72,6 +82,7 @@
     cursor: pointer;
     font-weight: $font-bold;
     font-size: 1rem;
+    padding-left:0;
 
     &:hover {
       color: $secondary-gray;
