--- a/app/_styles/blocks/nyheter.scss
+++ b/app/_styles/blocks/nyheter.scss
@@ -21,6 +21,14 @@
     margin-bottom: 1rem;
   }
 
+  label {
+    font-weight: bold;
+    font-size: 1.3rem;
+    margin-bottom: 0.25rem;
+    color: $secondary-blue;
+    display: inline-block;
+  }
+
   input {
     padding: 0.5rem;
     font-size: 1rem;
